--- a/artistas/Sen senra.html
+++ b/artistas/Sen senra.html
@@ -8,5 +8,8 @@
 <body>
     <img src="../imagen/sen senra.jpg">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/idFGrL2EH8c?si=GMr_Dg26FDQdupkF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TYsxQqbjQ0U?si=BmEUSH0-4mN3rm6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
