--- a/artistas/pomme.html
+++ b/artistas/pomme.html
@@ -6,7 +6,17 @@
     <title>Pomme</title>
 </head>
 <body>
-<img src="../imagen/pomme.webp">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/N85s1U4mGbA?si=5X5OrOXS5Tei44Qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+<img src="../imagen/pomme.webp" alt="Pomee chantose" width="500" height="500">
+
+<br>
+
+<iframe width="500" height="315" src="https://www.youtube.com/embed/N85s1U4mGbA?si=5X5OrOXS5Tei44Qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+
+<br>
+<br>
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EUYc_ST9M-Y?si=tSz2bdy0Sst1CyYW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
 </html>
