--- a/artistas/lana de rey.html
+++ b/artistas/lana de rey.html
@@ -11,7 +11,13 @@
         Regreso a la pagina principal
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/o_1aF54DO60?si=4ZfXkmqcNTqC6fg-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+  
          
 >a
+
+<br>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ZFWC4SiZBao?si=XnB6DskriUO8K1Ff" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
 </html>
