Horario de clases

--- a/academico.html
+++ b/academico.html
@@ -17,5 +17,58 @@
     
 <a href="Hola mundo.html"></a>
 </a>
+<!--Horario de clases-->
+<table border="1">
+    <tr>
+        <th>Hora</th>
+        <th>Salon</th>
+        <th>Materia</th>
+        <th>Maestro</th>
+        <th>Tipo</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>216</td>
+        <td>Economía</td>
+        <td>Ulises Lopez Flores</td>
+        <td>S</td>
+    </tr>
+<tr> 
+    <td>2</td>
+    <td>2091</td>
+    <td>Desarrollo de aplicaciones</td>
+    <td>Ricardo Arturo Elizalde</td>
+    <td>S</td>
+</tr>
+<tr>
+    <td>3</td>
+    <td>302</td>
+    <td>Calculo diferencial</td>
+    <td>Nicolas Gonzales</td>
+    <td>S</td>
+</tr>
+<tr>
+    <td>4</td>
+    <td>208</td>
+    <td>Ingles</td>
+    <td>Lourdes Garcia Salinas</td>
+    <td>S</td>
+</tr>
+<tr>
+    <td>5</td>
+    <td>402</td>
+    <td>Probabilidad y Estadística</td>
+    <td>Martha Herrera</td>
+    <td>S</td>
+</tr>
+<tr>
+    <td>6</td>
+    <td>401</td>
+    <td>Desarrollo de emprendedores</td>
+    <td>Nancy Nelly Acosta</td>
+    <td>S</td>
+</tr>
+
+</table>
 </body>
 </html>
