--- a/academico.html
+++ b/academico.html
@@ -72,3 +72,79 @@
 </table>
 </body>
 </html>
+
+<br>
+<br>
+<!--Tabla avanzada-->
+<table border="3">
+    <thead style="background-color: azure;">
+        <tr>
+            <th>Materia</th>
+            <th>Primer parcial</th>
+            <th>Segundo parcial</th>
+            <th>Tercer parcial</th>
+            <th>Examenes Finales</th>
+            <th>Final</th>
+        </tr>
+    </thead>
+    <tbody style="background-color: aquamarine;">
+        <tr>
+            <td>Economía</td>
+            <td>85</td>
+            <td>90</td>
+            <td>95</td>
+            <td>90</td>
+            <td>89</td>
+        </tr>
+    </tbody>
+    <tfoot style="background-color: antiquewhite;">
+        <tr>
+            <td>Desarrollo de aplicaciones</td>
+            <td>89</td>
+            <td>90</td>
+            <td>95</td>
+            <td>95</td>
+            <td>90</td>
+        </tr>
+    </tfoot>
+    <tfoot style="background-color:navajowhite;">
+        <tr>
+            <td>Cálculo diferencial</td>
+            <td>89</td>
+            <td>85</td>
+            <td>80</td>
+            <td>80</td>
+            <td>80</td>
+        </tr>
+    </tfoot>
+    <tfoot style="background-color: lightblue;">
+        <tr>
+            <td>Inglés</td>
+            <td>90</td>
+            <td>87</td>
+            <td>95</td>
+            <td>90</td>
+            <td>90</td>
+        </tr>
+    </tfoot>
+    <tfoot style="background-color: mediumpurple;">
+        <tr>
+            <td>Probabilidad y Estadística</td>
+            <td>90</td>
+            <td>95</td>
+            <td>85</td>
+            <td>95</td>
+            <td>90</td>
+        </tr>
+    </tfoot>
+    <tfoot style="background-color: rgb(109, 132, 207);">
+        <tr>
+            <td>Desarrollo de emprendedores</td>
+            <td>80</td>
+            <td>90</td>
+            <td>89</td>
+            <td>70</td>
+            <td>85</td>
+        </tr>
+    </tfoot>
+</table>
