--- a/hola mundo.html
+++ b/hola mundo.html
@@ -4,11 +4,19 @@
 <title>Esta es mi primera pagina web</title>
     <head>
 <body>
-    <h1>titulo principal</h1>
-    <h3>Hola mundo</h3>
+    <h1 style="color: darkslateblue;">Mi página principal</h1>
+    <style>
+        h1{color: crimson;
+        font-family: 'Courier New', Courier, monospace;}
+        #primerparrafo { color: rgb(224, 21, 224);}
+        .grupodeparrafos {color: forestgreen;}
+    </style>
+    <h1>titulo 2</h1>
+    <h3 class="grupodeparrafos">Hola mundo</h3>
     <br>
+    <h2 style="color: darkgoldenrod;">Título dos</h2>
     
     <a href="artistas/lana de rey.html"> Lana del Rey
 
     </a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod accusamus quisquam sint iusto officia sunt ut repellendus amet libero. Eius quam eaque voluptatem autem alias laborum fugit quo culpa fugiat!</p>
+    <p id="primerparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod accusamus quisquam sint iusto officia sunt ut repellendus amet libero. Eius quam eaque voluptatem autem alias laborum fugit quo culpa fugiat!</p>
