link de mi pagina

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <br>
     
     <a href="artistas/lana de rey.html"> Lana del Rey
+    <a href="academicoo.html/toolsdesoftware.html"> Tools </a>
 <br>
 
     </a>
